--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "@types/react": "18.2.46",
     "@types/react-dom": "18.2.18",
     "eslint": "^9.14.0",
+    "eslint-plugin-next": "^0.0.0",
     "postcss": "8.4.33",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.4.1",
