--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -40,6 +40,7 @@ jobs:
         with:
           node-version: "20"
           cache: ${{ steps.detect-package-manager.outputs.manager }}
+          working-directory: ./frontend
 
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} install
