--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -51,9 +51,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: setup
     steps:
+      - name: List files in workspace
+        run: ls -R
       - name: Run ESLint
         run: ${{ needs.setup.outputs.manager }} run lint
-        working-directory: ./frontend
+        working-directory: frontend
 
   # Test job
   test:
@@ -62,7 +64,7 @@ jobs:
     steps:
       - name: Run Tests
         run: ${{ needs.setup.outputs.manager }} run test
-        working-directory: ./frontend
+        working-directory: frontend
 
   # Build job
   build:
@@ -71,4 +73,4 @@ jobs:
     steps:
       - name: Build Next.js site
         run: ${{ needs.setup.outputs.runner }} next build
-        working-directory: ./frontend
+        working-directory: frontend
