--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -51,14 +51,19 @@ jobs:
     runs-on: ubuntu-latest
     needs: setup
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
       - name: Run ESLint
         run: ${{ needs.setup.outputs.manager }} run lint
+        working-directory: frontend
 
   # Test job
   test:
     runs-on: ubuntu-latest
     needs: [setup, lint]
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
       - name: Run Tests
         run: ${{ needs.setup.outputs.manager }} run test
         working-directory: frontend
@@ -68,6 +73,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [setup, test]
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
       - name: Build Next.js site
         run: ${{ needs.setup.outputs.runner }} next build
         working-directory: frontend
