--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -1,69 +1,39 @@
-# Workflow to build, lint, and test in /frontend
-name: build, lint, and test frontend
+# .github/workflows/main.yml
+name: Node.js CI/CD
 
 on:
   push:
-    branches: ["main"]
-    paths:
-      - "frontend/**"  # Only trigger on changes in the frontend directory
+    branches:
+      - main
   pull_request:
-    branches: ["main"]
-    paths:
-      - "frontend/**"  # Only trigger on changes in the frontend directory
-  workflow_dispatch:
+    branches: 
+      - main
 
 jobs:
-  # Reusable setup job for installing dependencies and detecting package manager
-  setup:
-    runs-on: ubuntu-latest
-    outputs:
-      manager: ${{ steps.detect-package-manager.outputs.manager }}
-      runner: ${{ steps.detect-package-manager.outputs.runner }}
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Detect package manager
-        id: detect-package-manager
-        run: |
-          if [ -f "${{ github.workspace }}/frontend/yarn.lock" ]; then
-            echo "manager=yarn" >> $GITHUB_OUTPUT
-            echo "runner=yarn" >> $GITHUB_OUTPUT
-          elif [ -f "${{ github.workspace }}/frontend/package.json" ]; then
-            echo "manager=npm" >> $GITHUB_OUTPUT
-            echo "runner=npx --no-install" >> $GITHUB_OUTPUT
-          else
-            echo "Unable to determine package manager"
-            exit 1
-          fi
-
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-          
-      - name: Install dependencies
-        run: ${{ steps.detect-package-manager.outputs.manager }} install
-        working-directory: ./frontend
-
-  # Build job
   build:
     runs-on: ubuntu-latest
-    needs: [setup]
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Build Next.js site
-        run: ${{ needs.setup.outputs.runner }} next build
+  
+      # caching the dependency
+      - name: Cache Dependencies
+        uses: actions/cache@v4
+        id: cache-node-modules
+        with:
+          path: 'frontend/node_modules'
+          key: deps-node-modules-${{ hashFiles('frontend/package-lock.json') }}
+
+      - name: Install dependencies
+        if: steps.cache-node-modules.outputs.cache-hit != 'true'
+        run: npm install
         working-directory: frontend
 
-  # Lint job (optional)
-  lint:
-    runs-on: ubuntu-latest
-    needs: [setup]
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      - name: Run ESLint
-        run: ${{ needs.setup.outputs.manager }} run lint
+      - name: Build code
+        run: npm run build
+        working-directory: frontend
+
+      - name: Lint code
+        run: npm run lint
         working-directory: frontend
