--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -33,6 +33,26 @@ jobs:
       - name: Build code
         run: npm run build
         working-directory: frontend
+        
+  lint:
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+  
+      # caching the dependency
+      - name: Cache Dependencies
+        uses: actions/cache@v4
+        id: cache-node-modules
+        with:
+          path: 'frontend/node_modules'
+          key: deps-node-modules-${{ hashFiles('frontend/package-lock.json') }}
+
+      - name: Install dependencies
+        if: steps.cache-node-modules.outputs.cache-hit != 'true'
+        run: npm install
+        working-directory: frontend
 
       - name: Lint code
         run: npm run lint
