--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -57,3 +57,4 @@ jobs:
       - name: Lint code
         run: npm run lint
         working-directory: frontend
+        continue-on-error: true # Allow linter to fail 
