--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,7 +40,8 @@
   "devDependencies": {
     "@eslint/js": "^9.14.0",
     "@types/eslint__js": "^8.42.3",
-    "@types/node": "20.10.6",
+    "@types/google-one-tap": "^1.2.6",
+    "@types/node": "^20.10.6",
     "@types/react": "18.2.46",
     "@types/react-dom": "18.2.18",
     "@typescript-eslint/eslint-plugin": "^8.13.0",
