--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "devDependencies": {
     "@eslint/js": "^9.14.0",
     "eslint": "^9.14.0"
+  },
+  "dependencies": {
+    "@svgr/webpack": "^8.1.0"
   }
 }
